--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,8 @@ dependencies {
     compile 'net.cachapa.expandablelayout:expandablelayout:2.9.2'
     compile 'com.intuit.sdp:sdp-android:1.0.4'
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
+
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     testCompile 'junit:junit:4.12'
 }
